--- a/src/Libraries/RevitNodes/RevitNodes.csproj
+++ b/src/Libraries/RevitNodes/RevitNodes.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Elements\Roof.cs" />
     <Compile Include="Elements\CurtainSystemType.cs" />
     <Compile Include="Elements\CurtainSystem.cs" />
+    <Compile Include="Elements\GlobalParameter.cs" />
     <Compile Include="Elements\InternalUtilities\ElementQueries.cs" />
     <Compile Include="Elements\InternalUtilities\ElementUtils.cs" />
     <Compile Include="Elements\InternalUtilities\TransformUtils.cs" />
