--- a/src/Libraries/RevitNodes/RevitNodes.csproj
+++ b/src/Libraries/RevitNodes/RevitNodes.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Elements\Roof.cs" />
     <Compile Include="Elements\CurtainSystemType.cs" />
     <Compile Include="Elements\CurtainSystem.cs" />
+    <Compile Include="Elements\GlobalParameter.cs" />
     <Compile Include="Elements\InternalUtilities\ElementQueries.cs" />
     <Compile Include="Elements\InternalUtilities\ElementUtils.cs" />
     <Compile Include="Elements\InternalUtilities\TransformUtils.cs" />
@@ -120,6 +121,7 @@
     <Compile Include="Elements\InternalUtilities\ElementWrapper.cs" />
     <Compile Include="Elements\Topography.cs" />
     <Compile Include="Elements\Views\PlanView.cs" />
+    <Compile Include="Elements\Views\ScheduleView.cs" />
     <Compile Include="Elements\Views\View.cs" />
     <Compile Include="Elements\Views\Packing\CygonRectanglePacker.cs" />
     <Compile Include="Elements\Views\AxonometricView.cs" />
@@ -136,7 +138,9 @@
     <Compile Include="Elements\Views\SectionView.cs" />
     <Compile Include="Elements\Views\Packing\OutOfSpaceException.cs" />
     <Compile Include="Elements\Views\Packing\RectanglePacker.cs" />
+    <Compile Include="Elements\FillPatternElement.cs" />
     <Compile Include="Filter\FilterRule.cs" />
+    <Compile Include="Elements\LinePatternElement.cs" />
     <Compile Include="Filter\OverrideGraphicSettings.cs" />
     <Compile Include="Filter\ParameterFilterElement.cs" />
     <Compile Include="GeometryConversion\EdgeLoopPartition.cs" />
@@ -144,6 +148,7 @@
     <Compile Include="GeometryConversion\GeometryDebugging.cs" />
     <Compile Include="GeometryConversion\CurveUtils.cs" />
     <Compile Include="GeometryConversion\HermiteToNurbs.cs" />
+    <Compile Include="GeometryConversion\DynamoToRevitBRep.cs" />
     <Compile Include="GeometryConversion\ProtoToRevitSolid.cs" />
     <Compile Include="GeometryConversion\ProtoToRevitMesh.cs" />
     <Compile Include="GeometryConversion\NurbsUtils.cs" />
@@ -196,6 +201,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.en-US.resx</DependentUpon>
     </Compile>
+    <Compile Include="Schedules\SchedulableField.cs" />
+    <Compile Include="Schedules\ScheduleExportOptions.cs" />
+    <Compile Include="Schedules\ScheduleField.cs" />
+    <Compile Include="Schedules\ScheduleFilter.cs" />
     <Compile Include="Transaction\Transaction.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -243,6 +252,7 @@
       <Name>RevitServices</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>copy /Y "$(ProjectDir)*_DynamoCustomization.xml" "$(OutputPath)"
