--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -101,6 +101,10 @@
     <Compile Include="WallTests.cs" />
     <Compile Include="CurtainSystemTests.cs" />
 	<Compile Include="PerformanceAdviserTests.cs" />
+	  <Compile Include="PerformanceAdviserTests.cs" />
+    <Compile Include="WallTests.cs" />
+    <Compile Include="CurtainSystemTests.cs" />
+    <Compile Include="GlobalParameterTests.cs" />
     <Compile Include="RoomTests.cs" />
     <Compile Include="RevisionTests.cs" />
     <Compile Include="LocationTests.cs" />
