--- a/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
+++ b/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
@@ -87,14 +87,17 @@
     <Compile Include="Elements\DividedSurfaceTests.cs" />
     <Compile Include="Elements\DocumentTests.cs" />
     <Compile Include="Elements\ElementTests.cs" />
+    <Compile Include="Elements\FillPatternTests.cs" />
     <Compile Include="Elements\FilterTests.cs" />
     <Compile Include="Elements\RoofTests.cs" />
     <Compile Include="Elements\FloorTests.cs" />
     <Compile Include="Elements\CoordinatesTests.cs" />
     <Compile Include="Elements\FloorTypeTests.cs" />
+    <Compile Include="Elements\GlobalParametersTests.cs" />
     <Compile Include="Elements\GridTests.cs" />
     <Compile Include="Elements\ImportInstanceTests.cs" />
     <Compile Include="Elements\LevelTests.cs" />
+    <Compile Include="Elements\LinePatternTests.cs" />
     <Compile Include="Elements\MaterialTests.cs" />
     <Compile Include="Elements\ModelTextTests.cs" />
     <Compile Include="Elements\ModelTextTypeTests.cs" />
@@ -121,6 +124,7 @@
     <Compile Include="Elements\Views\DraftingViewTests.cs" />
     <Compile Include="Elements\Views\FloorPlanViewTests.cs" />
     <Compile Include="Elements\Views\PerspectiveViewTests.cs" />
+    <Compile Include="Elements\Views\ScheduleViewTests.cs" />
     <Compile Include="Elements\Views\SectionViewTests.cs" />
     <Compile Include="Elements\Views\SheetTests.cs" />
     <Compile Include="Elements\Views\ViewTests.cs" />
