--- a/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
+++ b/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Elements\TagTests.cs" />
     <Compile Include="Elements\TextNoteTests.cs" />
     <Compile Include="Elements\TopographyTests.cs" />
+    <Compile Include="Elements\Views\AreaPlanViewTests.cs" />
     <Compile Include="Elements\Views\AxonometricViewTests.cs" />
     <Compile Include="Elements\Views\CeilingPlanViewTests.cs" />
     <Compile Include="Elements\Views\DraftingViewTests.cs" />
