--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -98,6 +98,7 @@
     <Compile Include="AsynchronousModeTests.cs" />
     <Compile Include="GlobalParameterTests.cs" />
     <Compile Include="PerformanceAdviserTests.cs" />
+    <Compile Include="SerializationTests.cs" />
     <Compile Include="WallTests.cs" />
     <Compile Include="CurtainSystemTests.cs" />
     <Compile Include="RoomTests.cs" />
