--- a/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
+++ b/test/Libraries/RevitNodesTests/RevitNodesTests.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Elements\Views\FloorPlanViewTests.cs" />
     <Compile Include="Elements\Views\LegendTests.cs" />
     <Compile Include="Elements\Views\PerspectiveViewTests.cs" />
+    <Compile Include="Elements\Views\ScheduleViewTests.cs" />
     <Compile Include="Elements\Views\SectionViewTests.cs" />
     <Compile Include="Elements\Views\SheetTests.cs" />
     <Compile Include="Elements\Views\ViewTests.cs" />
