--- a/src/Config/user_local.props
+++ b/src/Config/user_local.props
@@ -6,5 +6,6 @@
 	<DYNAMOTESTAPI Condition=" '$(DYNAMOTESTAPI)' == '' ">$(SolutionDir)..\bin\$(Platform)\$(Configuration)</DYNAMOTESTAPI>
 	<OutputPath Condition=" '$(OutputPath)' == '' ">$(SolutionDir)..\bin\AnyCPU\$(Configuration)\$(REVIT_VERSION)</OutputPath>
 	<TestOutputPath Condition=" '$(TestOutputPath)' == '' ">$(OutputPath)</TestOutputPath>
+  <REVITAPI Condition=" '$(REVITAPI)' == '' ">$(SolutionDir)..\..\Revit\$(Configuration)x64</REVITAPI>
   </PropertyGroup>
 </Project>
