--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -96,9 +96,12 @@
     <Compile Include="AdaptiveComponentTests.cs" />
     <Compile Include="AnalysisDisplayTests.cs" />
     <Compile Include="AsynchronousModeTests.cs" />
+    <Compile Include="ElementTypeTests.cs" />
     <Compile Include="ElementTests.cs" />
+    <Compile Include="FloorTypeTests.cs" />
     <Compile Include="GlobalParameterTests.cs" />
     <Compile Include="PerformanceAdviserTests.cs" />
+    <Compile Include="RoofTypeTests.cs" />
     <Compile Include="SerializationTests.cs" />
     <Compile Include="WallTests.cs" />
     <Compile Include="CurtainSystemTests.cs" />
@@ -145,6 +148,7 @@
     <Compile Include="SunSettingsTests.cs" />
     <Compile Include="TopographyTests.cs" />
     <Compile Include="TransformTest.cs" />
+    <Compile Include="WallTypeTests.cs" />
     <Compile Include="WorkflowTest.cs" />
     <Compile Include="XYZTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
