Elevation marker nodes (#2480)
* added ElevationMarker class

* elevationmarker nodes and tests

* comment updates

* Update RevitNodesImages.resx

* Update RevitNodesImages.resx

--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -99,6 +99,7 @@
     <Compile Include="AsynchronousModeTests.cs" />
     <Compile Include="ElementTypeTests.cs" />
     <Compile Include="ElementTests.cs" />
+    <Compile Include="ElevationMarkerTests.cs" />
     <Compile Include="FloorTypeTests.cs" />
     <Compile Include="GlobalParameterTests.cs" />
     <Compile Include="GroupTests.cs" />
