Family document nodes (#2490)
* FamilyDocument node

* FamilyDocument class + nodes

* Create FamilyParameter wrapper

* FamilyDocument tests

* small updates

* node name changes

* comment updates

* Update FamilyDocument.cs

* Familyparameter icons

* Update Family.cs

* add FamilyDocument.Type and FamilyType to set/get parameters + tests

* update tests

* Update RevitNodesImages.resx

--- a/src/Libraries/RevitNodes/RevitNodes.csproj
+++ b/src/Libraries/RevitNodes/RevitNodes.csproj
@@ -75,6 +75,7 @@
     <Compile Include="AnalysisDisplay\PointAnalysisDisplay.cs" />
     <Compile Include="AnalysisDisplay\VectorAnalysisDisplay.cs" />
     <Compile Include="Application\Document.cs" />
+    <Compile Include="Application\FamilyDocument.cs" />
     <Compile Include="Elements\Area.cs" />
     <Compile Include="Elements\Category.cs" />
     <Compile Include="Elements\Coordinates.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="Elements\FilledRegion.cs" />
     <Compile Include="Elements\FilledRegionType.cs" />
     <Compile Include="Elements\GlobalParameter.cs" />
+    <Compile Include="Elements\FamilyParameter.cs" />
     <Compile Include="Elements\Group.cs" />
     <Compile Include="Elements\PathOfTravel.cs" />
     <Compile Include="Elements\RoofType.cs" />
