Family instance nodes (#2484)
* ByCoordinateSystem node + tests

* Update FamilyInstance.cs

* FamilyInstance nodes + tests

* comment updates

* Update RevitNodesImages.resx

--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -101,6 +101,7 @@
     <Compile Include="AsynchronousModeTests.cs" />
     <Compile Include="ElementTypeTests.cs" />
     <Compile Include="ElementTests.cs" />
+    <Compile Include="FamilyInstanceTests.cs" />
     <Compile Include="ElevationMarkerTests.cs" />
     <Compile Include="FloorTypeTests.cs" />
     <Compile Include="GlobalParameterTests.cs" />
