Added system tests and integration test

--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -105,6 +105,7 @@
     <Compile Include="FloorTypeTests.cs" />
     <Compile Include="GlobalParameterTests.cs" />
     <Compile Include="GroupTests.cs" />
+    <Compile Include="PathOfTravelTests.cs" />
     <Compile Include="PerformanceAdviserTests.cs" />
     <Compile Include="RoofTypeTests.cs" />
     <Compile Include="SerializationTests.cs" />
