Add ScheduleOnSheet Nodes to Create Schedules on Sheet view

--- a/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
+++ b/test/Libraries/RevitIntegrationTests/RevitSystemTests.csproj
@@ -109,6 +109,7 @@
     <Compile Include="PerformanceAdviserTests.cs" />
     <Compile Include="RoofTests.cs" />
     <Compile Include="RoofTypeTests.cs" />
+    <Compile Include="ScheduleOnSheetTests.cs" />
     <Compile Include="SerializationTests.cs" />
     <Compile Include="SheetTests.cs" />
     <Compile Include="ViewportTests.cs" />
