Added new node for Ceiling creation.
Added new dropdown node for CeilingType.
Replaced obsoleted Floor creation API with a new one.
Added tests for new nodes.

--- a/src/Libraries/RevitNodes/RevitNodes.csproj
+++ b/src/Libraries/RevitNodes/RevitNodes.csproj
@@ -78,6 +78,8 @@
     <Compile Include="Application\FamilyDocument.cs" />
     <Compile Include="Elements\Area.cs" />
     <Compile Include="Elements\Category.cs" />
+    <Compile Include="Elements\Ceiling.cs" />
+    <Compile Include="Elements\CeilingType.cs" />
     <Compile Include="Elements\Coordinates.cs" />
     <Compile Include="Elements\CurtainGrid.cs" />
     <Compile Include="Elements\CurtainPanel.cs" />
